--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,11 @@ gtts>=2.3.0
 # Optional packages for enhanced language detection
 langdetect>=1.0.9
 langid>=1.1.6
+fasttext>=0.9.2  # Advanced language detection
+
+# Dependencies for Silero 
+torch>=1.13.0
+torchaudio>=0.13.0
+omegaconf>=2.3.0
+tqdm>=4.64.0     
+requests>=2.28.0 
