fixed docx missing import on file parser

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 PyPDF2>=3.0.0
 pyttsx3>=2.90
 gtts>=2.3.0
-
+docx>=0.8.11
 # Optional packages for enhanced language detection
 langdetect>=1.0.9
 langid>=1.1.6
